testing/tests/ui/char_literal.stderr
error: invalid character
 --> testing/templates/char-literals/char-literal-1.txt:1:11
       "'\\a' %}"
 --> tests/ui/char_literal.rs:4:19
  |
4 | #[template(path = "char-literals/char-literal-1.txt")]
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: invalid character
 --> testing/templates/char-literals/char-literal-2.txt:1:11
       "'\\x' %}"
 --> tests/ui/char_literal.rs:8:19
  |
8 | #[template(path = "char-literals/char-literal-2.txt")]
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: invalid character
 --> testing/templates/char-literals/char-literal-3.txt:1:11
       "'\\x1' %}"
  --> tests/ui/char_literal.rs:12:19
   |
12 | #[template(path = "char-literals/char-literal-3.txt")]
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: must be a character in the range [\x00-\x7f]
 --> testing/templates/char-literals/char-literal-4.txt:1:11
       "'\\x80' %}"
  --> tests/ui/char_literal.rs:16:19
   |
16 | #[template(path = "char-literals/char-literal-4.txt")]
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: invalid character
 --> testing/templates/char-literals/char-literal-5.txt:1:11
       "'\\u' %}"
  --> tests/ui/char_literal.rs:20:19
   |
20 | #[template(path = "char-literals/char-literal-5.txt")]
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: invalid character
 --> testing/templates/char-literals/char-literal-6.txt:1:11
       "'\\u{}' %}"
  --> tests/ui/char_literal.rs:24:19
   |
24 | #[template(path = "char-literals/char-literal-6.txt")]
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unicode escape must be at most 10FFFF
 --> testing/templates/char-literals/char-literal-7.txt:1:11
       "'\\u{110000}' %}"
  --> tests/ui/char_literal.rs:28:19
   |
28 | #[template(path = "char-literals/char-literal-7.txt")]
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: invalid character
 --> <source attribute>:1:11
       "'aaa' %}"
  --> tests/ui/char_literal.rs:32:21
   |
32 | #[template(source = "{% let s = 'aaa' %}", ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^^
